fixed topic info stats badge background-color on IE9

--- a/app/styles/_modules.scss
+++ b/app/styles/_modules.scss
@@ -28,6 +28,10 @@
     }
 }
 
+.clear_filter {
+    filter: none !important;
+}
+
 .bg_black {
     background-color: $black;
 }
